--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AnthonyMarc23/Doomsday-Trail#readme",
   "dependencies": {
+    "@ng-bootstrap/ng-bootstrap": "^2.1.1",
     "express": "^4.16.3"
   }
 }
