--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/AnthonyMarc23/Doomsday-Trail#readme",
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
