Have most of the database stuff connected just need to figure out last piece of puzzle.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name" : "NAME OF YOUR APP", 
-  "description" : "PROJECT DESCRIPTION", 
+  "name" : "doomsday-trail", 
+  "description" : "Doomsday Trail", 
   "image" : "heroku/nodejs"
 }
