--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/AnthonyMarc23/Doomsday-Trail#readme",
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "pg": "^7.4.3",
     "simple-get": "^3.0.2"
